# gene-network-builder

./: .gitignore  README.md  pyproject.toml
examples/: edges.csv  edges.tsv  output.graphml
src/gene_network/: annotate.py  builder.py  cli.py  io.py
src/gene_network_builder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_builder.py  test_cli.py  test_io.py
