[project]
name = "gene-network-builder"
version = "0.1.0"
description = "Utility for building gene–gene interaction networks"
requires-python = ">=3.9"

dependencies = [
    "networkx>=3.0",
]

[project.scripts]
gene-network = "gene_network.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
    